# hidrodb

./: .gitignore  .gitmodules  LICENSE  README  README.md  config.py  database.py  hidro.sql  hidro_models.py  hidro_webservices.py  jaydebeapi.py  jobs.py  main.py  pydoc-markdown.yml  pyproject.toml  requirements.txt
hidrodb/: __main__.py  config.py  database.py  hidro_webservices.py  jobs.py  webservices.py
hidrodb/models/: client.py  hidro.py
models/: client.py  hidro_models.py
tables/: client.sql  hidro.sql  jobs.sql
tests/: test_config.py  test_database.py  test_jobs.py  test_models_client.py  test_models_hidro.py  test_webservices.py
